<resources>
    <string name="app_name">VIB</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="achieve_your_health_and_weight_goals">ACHIEVE YOUR\nHEALTH AND\nWEIGHT GOALS</string>
    <string name="by_tracking_your_food_and_learning_along_the_way">By tracking your food and learning\nalong the way.</string>
    <string name="proceed">Proceed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="keep_me_loged_in">keep me Loged in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="contiune_with_apple">Contiune with Apple</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <font color="#4ac0fc" size="16"><b>Sign Up</b></font></string>
    <string name="or_register_as_a_gym_administrator">Or Register as a <font color="#4ac0fc" size="16"><b>GYM Administrator</b></font></string>
    <string name="or_registe_user">Or Login as a <font color="#4ac0fc" size="16"><b>User</b></font></string>
    <string name="otp">otp verification</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="code">Code</string>
    <string name="create_new_password">create new password</string>
    <string name="your_new_password">your new password</string>
    <string name="reset_password">reset password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">sign Up</string>
    <string name="sign_up2">SIGN UP</string>
    <string name="create_your_account">create your account</string>
    <string name="sign_up_for_7_days_trial">sign up for 7 days trial</string>
    <string name="continue_with_subscription">continue with subscription</string>
    <string name="i_agree_to_the_privacy_policy">I agree to the <font color="#4ac0fc">Privacy Policy</font></string>
    <string name="please_enter_your_code_here">Please enter your code here</string>
    <string name="payment_details">payment details</string>
    <string name="please_select_your_card">please select your card</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="please_fill_your_card_n_details">please fill your card\ndetails</string>
    <string name="card_name">Card Name</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvc">CVC</string>
    <string name="pay_your_subscription">pay your subscription</string>
    <string name="deduction_completed">deduction completed</string>
    <string name="your_payment_ndeduction_has_nbeen_completed_sucessfully">your payment\ndeduction has\nbeen completed\nsucessfully</string>
    <string name="already_have_an_account_log_in"> Already have an account?<font color="#4ac0fc" size="16"><b> Log In</b></font></string>
    <string name="find_the_gyms">find the gyms</string>
    <string name="set_the_radius_near_to_you">set the radius near to you</string>
    <string name="_0_meters">0 Meters</string>
    <string name="profile_completion">profile completion</string>
    <string name="you_can_upload_3_images">you can upload 3 images</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="age">Age</string>
    <string name="fitness_info">fitness info</string>
    <string name="types_of_workout">Types of workout</string>
    <string name="bodybuilding">Bodybuilding</string>
    <string name="running">Running</string>
    <string name="yoga">Yoga</string>
    <string name="athlete">Athlete</string>
    <string name="mixed_training">Mixed training</string>
    <string name="powerlifting">Powerlifting</string>
    <string name="fitness_goal">Fitness goal</string>
    <string name="current_weight">Current Weight</string>
    <string name="pounds">Pounds</string>
    <string name="weight_goal">Weight Goal</string>
    <string name="set">SET</string>
    <string name="kilogram">Kilogram</string>
    <string name="weight_goal_per_nweek">weight goal per\nweek</string>
    <string name="badge_certification_image">Badge Certification Image</string>
    <string name="add_image">Add image</string>
    <string name="save">Save</string>
    <string name="save_info">SAVE INFO</string>
    <string name="weight_goal_each_week">Weight Goal Each Week</string>
    <string name="personal_record_if_any_lbs_and_reps">Personal Record if any (lbs and reps)</string>
    <string name="personal_records">personal records</string>
    <string name="weight">weight</string>
    <string name="lbs">lbs</string>
    <string name="reps">reps</string>
    <string name="lawrence_hakward">Lawrence Hakward</string>
    <string name="gym_profile_completion">gym profile completion</string>
    <string name="location">Location</string>
    <string name="show_gym_activities">Show gym activities</string>
    <string name="gym_activities">gym activities</string>
    <string name="available_for_parks">Available for parks</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="available_for_outside">Available for outside</string>
    <string name="most_busy_hours">Most busy hours</string>
    <string name="the_number_of_persons_that_are">The number of persons that are</string>
    <string name="member">Members</string>
    <string name="lawrence">Lawrence</string>
    <string name="it_is_along_established_fact_that_a_will_be_distracted">It is along established fact that a will be distracted.</string>
    <string name="about_user">about user</string>
    <string name="it_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable">It is a long-established fact that a reader will be distracted by the readable.</string>
    <string name="_25_years_old">25 years old</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="weight_lose_goal">Weight lose goal</string>
    <string name="personal_record">Personal Record</string>
    <string name="repsCapt">Reps</string>
    <string name="weightCapt">Weight</string>
    <string name="fitness_idol">Fitness Idol</string>
    <string name="tom_jerry">Tom Jerry</string>
    <string name="notifications">Notifications</string>
    <string name="your_feed_has_been_visitod_by_180_people">Your feed has been visitod by 180 people.</string>
    <string name="my_profile">my profile</string>
    <string name="dummy_location">Dummy Location</string>
    <string name="leaderboard_image">LeaderBoard Image</string>
    <string name="gym_activity">GYM Activity</string>
    <string name="gym_busy_hours">GYM busy hours</string>
    <string name="number_of_persons_that_are_working_out">Number of persons that are working out</string>
    <string name="log_out">log out</string>
    <string name="gym_graph">gym graph</string>
    <string name="privacy_policy">It is a long established fact that a reader will be distracted by the readable content ofapage when looking at its layout. The point of using Lorem ipsum is that it hasamore-or-less normal distribution of letters, as opposed to using Content here, content here, It isalong established fact thatareader will be distracted by the readable content ofapage when looking at its layout The point of using Lorem ipsum is that it hasamore-or-less normal distribution of letters, as opposed to using Content here, content here, It isalong established fact thatareader will be distracted by the readable corntent ofapage when looking at its layout The point of using Lorem ipsum is that it hasamore-orless normal distribution of letters, as opposed to using Content here content here, It isalong established fact thatareader will be distracted</string>
    <string name="privacy_policy2">privacy policy</string>
    <string name="terms_amp_conditions"><![CDATA[terms & conditions]]></string>
    <string name="apply">Apply</string>
    <string name="gym_list">gym list</string>
    <string name="transformation_gym">Transformation GYM</string>
    <string name="miami_florida">Miami, Florida</string>
    <string name="gym_details">gym details</string>
    <string name="gym_name">Gym Name</string>
    <string name="transformation">Transformation</string>
    <string name="activity">Activity</string>
    <string name="available_for_park_amp_outside"><![CDATA[Available for Park & Outside]]></string>
    <string name="_4pm_8pm">4pm - 8pm</string>
    <string name="people_at_the_gym">People at the GYM</string>
    <string name="join_the_gym">join the gym</string>
    <string name="my_gym">my gym</string>
    <string name="start_session">start session</string>
    <string name="end_session">end session</string>
    <string name="my_gym_details">my gym details</string>
    <string name="leave_the_gym">leave the gym</string>
    <string name="the_users_that_checked_in_at_the_same_time">THE USERS THAT CHECKED IN AT THE SAME TIME</string>
    <string name="set_your_time_amp_place"><![CDATA[set your time & Place]]></string>
    <string name="send_workout_request">send workout request</string>
    <string name="place">PLACE</string>
    <string name="outdoor">Outdoor</string>
    <string name="indoor">Indoor</string>
    <string name="time">TIME</string>
    <string name="scheduled_workout">scheduled workout</string>
    <string name="chat_group">CHAT / GROUP</string>
    <string name="feed">feed</string>
    <string name="achievements">Achievements</string>
    <string name="profile">profile</string>
    <string name="notification">notification</string>
    <string name="gym_buddy">gym buddy</string>
    <string name="select_workout">Select Workout</string>
    <string name="set_date">Set Date</string>
    <string name="save_scheduled_workout">save scheduled workout</string>
    <string name="user_details">user details</string>
    <string name="my_activities">my activities</string>
    <string name="view_the_calendar_how_many_ndays_you_have_checked_in">View the calendar how many\ndays you have checked in</string>
    <string name="april_2022">April, 2022</string>
    <string name="my_personal_record">My Personal Record</string>
    <string name="how_long_i_have_been_exercising">How long I have been exercising</string>
    <string name="_7_days">7 Days</string>
    <string name="longest_gym_streak">Longest gym streak</string>
    <string name="member_of_this_gym_since">Member of this gym since</string>
    <string name="_12_04_2022">12-04-2022</string>
    <string name="most_common_workout_time">Most common workout time</string>
    <string name="_1pm_2pm">1pm - 2pm</string>
    <string name="my_workout_fot_the_day_long">My workout fot the day long</string>
    <string name="create_new">create new</string>
    <string name="michelle_stonr">Michelle Stonr</string>
    <string name="adding_a_few_more_photos_to_my_portfolio_need_a_photographer_get_in_touch">Adding a few more photos to my portfolio Need a photographer? Get in touch!</string>
    <string name="_100_likes">100 Likes</string>
    <string name="_25_comments">25 Comments</string>
    <string name="oops_nyou_have_not_n_created_any_nfeed_yet">Oops!\nYou have not\n created any\nfeed yet</string>
    <string name="oops_nyou_have_not_n_created_any_nfeed_yet2">Oops!\nYou have not\n created any\ngroup yet</string>
    <string name="just_now">Just Now</string>
    <string name="justin_rhyss_has_started_hi_session">Justin Rhyss has started hi session</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
</resources>