<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boarding_bg2"
    tools:context=".views.activities.BoardingActivity">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/avenir_next_bold"
        android:lineSpacingExtra="@dimen/_8sdp"
        android:text="@string/achieve_your_health_and_weight_goals"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/avenir_next_medium"
        android:lineSpacingExtra="@dimen/_6sdp"
        android:text="@string/by_tracking_your_food_and_learning_along_the_way"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/btnProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/main_btton_background"
        android:fontFamily="@font/avenir_next_bold"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/proceed"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />



</RelativeLayout>