<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.authFragments.PaymentFragment">

    <RelativeLayout
        android:id="@+id/lltop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@drawable/boarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/StyleRippleCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/back" />
        </com.balysv.materialripple.MaterialRippleLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_68sdp"
        android:background="@drawable/black2222"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textVerification"
            style="@style/topMainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:text="@string/credit_card" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_36sdp"
            android:fontFamily="@font/avenir_next_medium"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:text="@string/please_fill_your_card_n_details"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edCardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textCreatAccount"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/editetx_bg"
            android:hint="@string/card_name"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_16sdp"
            android:textColorHint="@color/Grey"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edMMYY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textCreatAccount"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/editetx_bg"
            android:hint="@string/mm_yy"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_16sdp"
            android:textColorHint="@color/Grey"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edCVC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textCreatAccount"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/editetx_bg"
            android:hint="@string/cvc"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_16sdp"
            android:textColorHint="@color/Grey"
            android:textSize="@dimen/_12ssp" />


        <TextView
            android:id="@+id/btnPaySubscription"
            style="@style/mainButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/main_btn_selected_bg"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/pay_your_subscription" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>