<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.authFragments.PaymentDetailFragment">

    <RelativeLayout
        android:id="@+id/lltop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@drawable/boarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/StyleRippleCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/back" />
        </com.balysv.materialripple.MaterialRippleLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_68sdp"
        android:background="@drawable/black2222"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textVerification"
            style="@style/topMainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:text="@string/payment_details" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_36sdp"
            android:fontFamily="@font/avenir_next_medium"
            android:text="@string/please_select_your_card"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editetx_bg">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/credit_card"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/_12sdp"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/editetx_bg">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/debit_card"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/_12sdp"
                    />

            </RelativeLayout>



        </RadioGroup>



        <TextView
            android:id="@+id/btnProceed"
            style="@style/mainButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/main_btn_selected_bg"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/proceed" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>